# Deep-Research-Agents

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  UI_README.md  claude_code_model.txt  main.py  pyproject.toml  setup.cfg
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_architecture.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
config/: project_config_templates.yaml
deep-research-ui/: .gitignore  README.md  package-lock.json  package.json  playwright-test-i18n.js  playwright-test.js  vitest.config.ts
deep-research-ui/.claude/: settings.local.json
deep-research-ui/backend/: .flake8  main.py  models.py  pytest.ini  requirements.txt
deep-research-ui/backend/tests/: test_api.py  test_models.py
deep-research-ui/src/: App.tsx  index.css
deep-research-ui/src/components/__tests__/: AgentDashboard.test.tsx  AgentManagement.test.tsx  CitationInterface.test.tsx  MemoryInterface.test.tsx  dashboard.test.tsx  i18n-components.test.tsx  search.test.tsx
deep-research-ui/src/components/agents/: AgentManagement.tsx
deep-research-ui/src/components/citations/: CitationInterface.tsx
deep-research-ui/src/components/dashboard/: AgentDashboard.tsx  Dashboard.tsx
deep-research-ui/src/components/memory/: MemoryInterface.tsx
deep-research-ui/src/components/search/: SearchInterface.tsx
deep-research-ui/src/components/shared/: Header.tsx  LanguageSwitcher.tsx
deep-research-ui/src/hooks/: useAgents.ts
deep-research-ui/src/i18n/: I18nErrorBoundary.tsx  README.md  cache.ts  config.ts  fallback.ts  formatters.ts  types.ts  unused-keys-detector.ts
deep-research-ui/src/i18n/__tests__/: formatters.test.ts  translations.test.ts
deep-research-ui/src/i18n/locales/en/: agents.json  citations.json  common.json  dashboard.json  errors.json  forms.json  memory.json  search.json
deep-research-ui/src/i18n/locales/ja/: agents.json  citations.json  common.json  dashboard.json  errors.json  forms.json  memory.json  search.json
deep-research-ui/src/services/: api.ts  websocket.ts
deep-research-ui/src/services/__tests__/: api.test.ts  http-fallback.test.ts  websocket.test.ts
deep-research-ui/src/test/: setup.ts
deep-research-ui/src/types/: index.ts
demo/: insurance_plugin_agent.py
lib/: agent_factory.py  config.py  util.py
lib/citation/: __init__.py  agents.py  formatters.py  manager.py  models.py  plugins.py  validators.py
lib/config/: __init__.py  project_config.py
lib/memory/: __init__.py  manager.py  plugin.py  utils.py
lib/orchestration/: __init__.py  lead_researcher_agent.py  parallel_research_plugin.py  research_executor.py  temperature_manager.py
lib/prompts/: common.py
lib/prompts/agents/: __init__.py  citation.py  credibility_critic.py  final_answer.py  manager.py  reflection_critic.py  report_writer.py  researcher.py  summarizer.py  translator.py
lib/search/: __init__.py  base.py  manager.py  plugin.py
lib/search/providers/: __init__.py  azure_search.py  web_search.py
lib/utils/: logging_config.py  prompt_manager.py
