[project]
name = "deep-research-agents"
version = "1.0.0"
description = "企業向け内部文書検索とディープリサーチを自動化するAIエージェントシステム"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Deep Research Agents Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core Framework
    "semantic-kernel>=1.32.1",
    # Search and Web APIs
    "tavily-python>=0.7.5",
    "azure-search-documents>=11.5.2",
    "azure-identity>=1.23.0",
    "openai>=1.86.0",
    # Configuration and Environment
    "python-dotenv>=1.1.0",
    # Additional dependencies for enhanced functionality
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "PyYAML>=6.0",
    "jinja2>=3.0.0",
    "markdown>=3.4.0",
    "beautifulsoup4>=4.11.0",
    # FastAPI Backend Dependencies
    "fastapi[standard]>=0.115.5",
    "uvicorn[standard]>=0.24.0",
    "litellm[proxy]>=1.75.7",
    "python-socketio>=5.10.0",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "pre-commit>=4.2.0",
    "types-pyyaml>=6.0.12.20250809",
    "types-psutil>=7.0.0.20250801",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "httpx>=0.25.0",
    "autoflake>=2.0.0",
    "pyupgrade>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "httpx>=0.25.0",
    "poethepoet>=0.37.0",
    "autoflake>=2.0.0",
    "pyupgrade>=3.0.0",
]

[tool.poe.tasks]
dev = "uvicorn deep-research-ui.backend.main:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn deep-research-ui.backend.main:app --host 0.0.0.0 --port 8000"
autoflake = "uv run autoflake --in-place --remove-all-unused-imports --remove-unused-variables --expand-star-imports --recursive lib deep-research-ui/backend"
pyupgrade = "uv run pyupgrade --py312-plus $(find lib deep-research-ui/backend -name '*.py' -type f)"
black = "uv run black lib deep-research-ui/backend"
isort = "uv run isort lib deep-research-ui/backend"
lint-fix = ["autoflake", "pyupgrade", "black", "isort"]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E501", "W503", "E122"]
exclude = [".git", "__pycache__", ".venv", "venv", ".tox", ".eggs", "*.egg", "build", "dist", ".pytest_cache", ".coverage", "htmlcov", ".mypy_cache"]
